# bacpy

./: '  .gitignore  LICENSE  README.md  __main__.py  bacpy.py  cli.py  core.py  events.py  setup.cfg  test.py
bacpy/: __main__.py  cli.py  core.py  file_ranking.py  main.py  memory_ranking.py  utils.py
old_rankings/: 4_9.csv
tests/: ranking.py  test_cli.py  test_core.py  test_file_ranking.py  test_memory_ranking.py  test_utils.py
