[metadata]
name = bacpy
version = 0.4
description = Bulls and Cows game implementation by Tomasz Olszewski
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomol111/bacpy
author = Tomasz Olszewski
author_email = tomol111@wp.pl

[options]
py_modules = bacpy
install_requires =
	pandas
	prompt-toolkit
	tabulate
python_requires = >=3.6

[options.entry_points]
console_scripts =
    bacpy = bacpy:run

[mypy]
ignore_missing_imports = True
