[metadata]
name = bacpy
version = 0.5dev
description = Bulls and Cows game implementation by Tomasz Olszewski
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomol111/bacpy
author = Tomasz Olszewski
author_email = tomol111@wp.pl
license = MIT
license_file = LICENSE

[options]
packages = bacpy
install_requires =
	prompt-toolkit
	tabulate
python_requires = >=3.8

[options.entry_points]
console_scripts =
    bacpy = bacpy.main:main

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 90
